--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mongoose": "^4.7.1",
     "morgan": "^1.8.1",
     "passport": "^0.3.2",
-    "passport-http-bearer": "^1.0.1"
+    "passport-http-bearer": "^1.0.1",
+    "qiniu": "^6.1.13"
   }
 }
