--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "body-parser": "^1.15.2",
     "connect-multiparty": "^2.0.0",
     "express": "^4.14.0",
+    "formidable": "^1.1.1",
     "jsonwebtoken": "^7.1.9",
     "mongoose": "^4.7.1",
     "morgan": "^1.8.1",
+    "multer": "^1.3.0",
+    "multiparty": "^4.1.3",
     "passport": "^0.3.2",
     "passport-http-bearer": "^1.0.1",
     "qiniu": "^6.1.13"
